--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/jquery-3.3.1.slim.min.js",
+              "src/popper.min.js",
+              "src/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
